--- a/index.html
+++ b/index.html
@@ -70,10 +70,23 @@ footer {
 <section>
   
   <article>
-    <h1>London</h1>
-    <p></p>
+    <h1>The Gila Monster Is Strong and Independent</h1>
+    <p>The Gila Monster doesn't run away, it fights for what it deems important, like a warrior would.</p>
     </article>
 </section>
+  
+  <article>
+    <h1>It's Unique</h1>
+    <p>Gecko's are very common, but Gila Monsters are very unique and different just like us, the warriors.</p>
+    </article>
+</section>
+  
+   <article>
+    <h1>It's powerful</h1>
+    <p>The Gila Monster is very powerful and it fights for itself, like a warrior can.</p>
+    </article>
+</section>
+
 
 <footer>
     <nav>
