--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ footer {
 <footer>
     <nav>
     <ul>
-      <li><a href="#">Contact Mason Foy</a></li>
-      <li><a href="#">About The Gila Monster</a></li>
+      <li><a href="mailto: 24foymasm@washk12.org">Contact Mason Foy</a></li>
+      <li><a href="ATGM.html">About The Gila Monster</a></li>
     </ul>
   </nav>
 </footer>
