--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ section:after {
 }
 /* Style the footer */
 footer {
+  position:absolute;
+    bottom:0;
   background-color: #777;
   padding: 10px;
   text-align: center;
